<resources>
    <string name="app_name">Prestamista</string>
    <string name="title_activity_principal">Inicio</string>
    <string name="agregarClientes">Agregar Cliente</string>
    <string name="cedula">Documento de Identidad</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="direccion">Direccion</string>
    <string name="celular">Celular</string>
    <string name="simulador">Simulador de credito</string>
    <string name="valorPrestamo">Valor a prestar</string>
    <string name="porcentaje">Porcentaje de interés</string>
    <string name="calcular">Calcular</string>
    <string name="meses">Tiempo de pago (meses)</string>
    <string name="error1">Debe llenar este campo</string>
    <string name="error2">Debe ingresar un valor valido</string>
    <string name="error3">Debe elegir una modalidad de pago</string>
    <string name="error4">Debe elegir el sexo del cliente</string>
    <string name="seleccione1">Seleccione un valor</string>
    <string name="seleccione2">Seleccione el sexo del cliente</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="quincenal">quincenal</string>
    <string name="mensual">mensual</string>
    <string name="valC">Valor Cuota:</string>
    <string name="nCuot">No. Cuotas:</string>
    <string name="cuotas">Cuotas</string>
    <string name="total">Total:</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>
    <string name="mensaje_cliente_guardado">Cliente guardado con exito!</string>
    <string name="agregarP">Agregar Prestamo</string>
    <string name="fecha">Fecha y hora</string>
    <string name="agregarA">Agregar Abono</string>
    <string name="valorAbono">Valor a abonar</string>
    <string name="mensaje_prestamo_exitoso">Prestamo registrado!</string>
    <string-array name="modo">
        <item>@string/seleccione1</item>
        <item>@string/diario</item>
        <item>@string/semanal</item>
        <item>@string/quincenal</item>
        <item>@string/mensual</item>
    </string-array>

    <string-array name="sexo">
        <item>@string/seleccione2</item>
        <item>@string/m</item>
        <item>@string/f</item>
    </string-array>
    <string name="title_activity_nav">Nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Acerca de:</string>
    <string name="login">Acceso</string>
    <string name="correo">Correo electronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar">Iniciar sesion</string>
    <string name="numero">#</string>
    <string name="deuda">Saldo</string>
    <string name="cc">cc</string>
    <string name="dia">dia</string>
    <string name="abono">Abono</string>
    <string name="saldo">Saldo</string>
    <string name="deudaActual">Deuda Actual</string>
    <string name="llamar">Llamar</string>
    <string name="cuotRest">Cuotas Restantes</string>
    <string name="error5">Debe indicar un numero valido</string>
    <string name="title_activity_principal2">Principal2</string>
    <string name="listaCLientes">Lista clientes</string>
    <string name="actualizar">Actualizar</string>
    <string name="mensaje_prestamo_agregado_exitosamente">Presamo asignado</string>
    <string name="confirmacion">Seguro que desea agregar?</string>
    <string name="info">Recuerde verificar la informacion</string>
    <string name="ok">Confirmar</string>
    <string name="cancelar">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
