<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.estan.lenderapp.AgregarCliente"><![CDATA[
    android:weightSum="1">

    ]]>

    <TextView
        android:id="@+id/AGREGAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simulador"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtvalor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valorPrestamo"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txtPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/porcentaje"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:weightSum="1">

        <EditText
            android:id="@+id/txtMeses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meses" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/cmbModo"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="19dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/nCuot"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCantCuot"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:hint="0"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/valC"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtCuota"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:hint="0"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="19dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/total"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:hint="0"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCalcular"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="74dp"
            android:layout_weight="0.97"
            android:onClick="calcular"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_weight="1.00"
            android:onClick="limpiar"
            android:text="@string/limpiar" />
    </LinearLayout>

</LinearLayout>