<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.estan.lenderapp.AgregarPrestamo">
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AGREGAR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregarP"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtValor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valorPrestamo"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/txtPorcentaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/porcentaje"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/txtTasa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:hint="@string/meses"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/txtCuotas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:hint="@string/nCuot"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtFechaPres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/fecha"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:layout_weight="0.97"
                    android:onClick="nuevop"
                    android:text="@string/guardar" />

                <Button
                    android:id="@+id/btnLimpiar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_weight="1.00"
                    android:onClick="limpiar"
                    android:text="@string/limpiar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>